Lint Java21